remove bg color

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- horizontal responsive  display -->
     <ins
       class="adsbygoogle"
-      style="display: block; background-color: antiquewhite"
+      style="display: block"
       data-ad-client="ca-pub-9941909038994517"
       data-ad-slot="7879240464"
       data-ad-format="auto"
